// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Generic/Button Disabled 1`] = `
<button
  className="dd button has-background hoverable text-button is-rounded"
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Normal 1`] = `
<button
  className="dd button has-background hoverable text-button is-rounded"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Primary 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary is-rounded"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Primary Disabled 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary is-rounded"
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Primary Icon 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary is-rounded"
  type="button"
>
  Text 
  <span
    className="dd icon icon-chevron-down"
  />
</button>
`;

exports[`Storyshots Generic/Button Primary Loading 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary is-rounded"
  type="button"
>
  <div
    className="dd stack"
  >
    <div
      className="dd stack-center-layer"
    >
      <div
        className="dd loader"
      />
    </div>
    <div
      className="dd dim"
    >
      Text
    </div>
  </div>
</button>
`;

exports[`Storyshots Generic/Button Primary Not Rounded 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Primary Selected 1`] = `
<button
  className="dd button has-background hoverable text-button bg-primary is-selected is-rounded"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Generic/Button Reset Normal 1`] = `
<button
  className="dd button has-background hoverable text-button is-rounded"
  type="reset"
>
  Reset
</button>
`;

exports[`Storyshots Generic/Button Submit Loading 1`] = `
<button
  className="dd button has-background hoverable text-button is-rounded"
  type="submit"
>
  <div
    className="dd stack"
  >
    <div
      className="dd stack-center-layer"
    >
      <div
        className="dd loader"
      />
    </div>
    <div
      className="dd dim"
    >
      Done
    </div>
  </div>
</button>
`;

exports[`Storyshots Generic/Button Submit Normal 1`] = `
<button
  className="dd button has-background hoverable text-button is-rounded"
  type="submit"
>
  Done
</button>
`;
